--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -16,8 +16,8 @@
                     <p class="sortaBigFont">{{burger_name}} </p>
                 </div>
                 <div class="col-4">
-                    <button class="btn btn-dark customFont devourBtn" id="{{id}}"><i class="fas fa-utensils"></i>
-                        Devour </button>
+                    <button class="btn btn-dark customFont devourBtn" id="{{id}}">
+                        Devour</button>
                         
                 </div>
             </div>
