--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,14 +1,20 @@
 <div class="container text-dark">
     <div class="row text-center">
         <div class="col-12">
-            <h1>Eat DA BURGER</h1>
+            <br>
+            <h3>Welcome to the Good Burger, Home of the Good Burger.<br></h3>
+            <br>
+            <h1> Can I take your order?</h1>
+            <br>
+            <hr>
         </div>
     </div>
     <div class="row">
         <div class="col-6">
-            <h1 class="text-center">
+            <h2 class="text-center">
                 Avaialable Burgers
-            </h1>
+            </h2>
+            <hr>
             {{#each burgers}}
             {{#unless devoured}}
             <div class="row">
@@ -16,17 +22,16 @@
                     <p class="sortaBigFont">{{burger_name}} </p>
                 </div>
                 <div class="col-4">
-                    <button class="btn btn-dark customFont devourBtn" id="{{id}}">
-                        Devour</button>
-                        
+                    <button class="btn btn-dark customFont devourBtn" id="{{id}}"> EAT</button>
+
                 </div>
             </div>
             {{/unless}}
             {{/each}}
         </div>
         <div class="col-lg-6">
-            <h2 class="customFont text-center border-bottom">Davoured Burgers</h2>
-
+            <h2 class="customFont text-center">Burgers Eaten</h2>
+            <hr>
             {{#each burgers}}
             {{#if devoured}}
             <div class="row">
